lazy load script + youtube embed video optimized with script

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <!-- ======= About Us Section ======= -->
     <section id="about" class="about">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
 
         <div class="section-header">
           <h2>Tentang Kami</h2>
@@ -189,7 +189,7 @@
 
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="clients">
-      <div class="container" data-aos="zoom-out">
+      <div class="container">
         <div class="section-header">
           <h2>Klien</h2>
           <p>Berikut beberapa Klien dari berbagai Perusahaan dan Instansi Pemerintahan yang sudah mempercayakan kami :
@@ -198,19 +198,19 @@
 
         <div class="clients-slider swiper">
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="assets/img/clients/insitut-teknologi-dan-bisnis-mesuji.png" alt="institut teknologi dan bisnis mesuji klien dari mipdevp">
+            <div class="swiper-slide"><img data-src="assets/img/clients/insitut-teknologi-dan-bisnis-mesuji.png" class="lazyload" alt="institut teknologi dan bisnis mesuji klien dari mipdevp">
             </div>
             <div class="swiper-slide"><img
-                src="assets/img/clients/kantor-perwakilan-bank-indonesia-provinsi-lampung.png" alt="kantor perwakilan bank indonesia provinsi lampung klien dari mipdevp">
+                data-src="assets/img/clients/kantor-perwakilan-bank-indonesia-provinsi-lampung.png" class="lazyload" alt="kantor perwakilan bank indonesia provinsi lampung klien dari mipdevp">
             </div>
-            <div class="swiper-slide"><img src="assets/img/clients/kementrian-kebudayaan-pariwisata-lombok-utara.png"
+            <div class="swiper-slide"><img data-src="assets/img/clients/kementrian-kebudayaan-pariwisata-lombok-utara.png" class="lazyload"
                 alt="kementrian kebudayaan pariwisata lombok utara klien dari mipdevp"></div>
-            <div class="swiper-slide"><img src="assets/img/clients/politeknik-negeri-lampung.png" alt="politeknik negeri lampung klien dari mipdevp"></div>
-            <div class="swiper-slide"><img src="assets/img/clients/pemerintahan-provinsi-kalimantan-barat.png" alt="pemerintahan provinsi kalimantan barat klien dari mipdevp">
+            <div class="swiper-slide"><img data-src="assets/img/clients/politeknik-negeri-lampung.png" class="lazyload" alt="politeknik negeri lampung klien dari mipdevp"></div>
+            <div class="swiper-slide"><img data-src="assets/img/clients/pemerintahan-provinsi-kalimantan-barat.png" class="lazyload" alt="pemerintahan provinsi kalimantan barat klien dari mipdevp">
             </div>
-            <div class="swiper-slide"><img src="assets/img/clients/pembinaan-dan-pelatihan-private-mandiri-polisi.png"
+            <div class="swiper-slide"><img data-src="assets/img/clients/pembinaan-dan-pelatihan-private-mandiri-polisi.png" class="lazyload"
                 alt="pembinaan dan pelatihan private mandiri polisi klien dari mipdevp"></div>
-            <div class="swiper-slide"><img src="assets/img/clients/mitra-penta-solusindo.png" alt="mitra penta solusindo klien dari mipdevp">
+            <div class="swiper-slide"><img data-src="assets/img/clients/mitra-penta-solusindo.png" class="lazyload" alt="mitra penta solusindo klien dari mipdevp">
             </div>
           </div>
         </div>
@@ -220,7 +220,7 @@
 
     <!-- ======= Stats Counter Section ======= -->
     <section id="stats-counter" class="stats-counter sections-bg">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
 
         <div class="row gy-4 align-items-center">
 
@@ -251,7 +251,7 @@
 
     <!-- ======= Call To Action Section ======= -->
     <section id="call-to-action" class="call-to-action">
-      <div class="container text-center" data-aos="zoom-out">
+      <div class="container text-center">
         <h3>Buat Website Impian Anda Sekarang!</h3>
         <p>Konsultasikan apapun yang dibutuhkan untuk mewujudkan Website yang anda inginkan.</p>
         <a class="cta-btn" href="https://api.whatsapp.com/send?phone=6282180221160" target="_blank" rel="noreferrer noopener">Pesan Sekarang</a>
@@ -260,7 +260,7 @@
 
     <!-- ======= Our Services Section ======= -->
     <section id="services" class="services sections-bg">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
 
         <div class="section-header">
           <h2>Layanan Kami</h2>
@@ -269,7 +269,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-4 col-md-6"  data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-4 col-md-6">
             <div class="service-item  position-relative">
               <div class="icon">
                 <i class="bi bi-building"></i>
@@ -279,7 +279,7 @@
             </div>
           </div><!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6"  data-aos="fade-up" data-aos-delay="500">
+          <div class="col-lg-4 col-md-6">
             <div class="service-item position-relative">
               <div class="icon">
                 <i class="bi bi-graph-up"></i>
@@ -289,7 +289,7 @@
             </div>
           </div><!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6"  data-aos="fade-up" data-aos-delay="700">
+          <div class="col-lg-4 col-md-6">
             <div class="service-item position-relative">
               <div class="icon">
                 <i class="bi bi-easel"></i>
@@ -306,7 +306,7 @@
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
 
         <div class="section-header">
           <h2>Portfolio</h2>
@@ -314,7 +314,7 @@
         </div>
 
         <div class="portfolio-isotope" data-portfolio-filter="*" data-portfolio-layout="masonry"
-          data-portfolio-sort="original-order" data-aos="fade-up" data-aos-delay="100">
+          data-portfolio-sort="original-order">
 
           <div>
             <ul class="portfolio-flters">
@@ -329,7 +329,7 @@
             <div class="col-xl-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <a href="assets/img/portfolio/beasiswa-kpbwi-provinsi-lampung.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
-                    src="assets/img/portfolio/beasiswa-kpbwi-provinsi-lampung.jpg" class="img-fluid" alt="beasiswa kpbwi provinsi lampung projek dari mipdevp"></a>
+                    data-src="assets/img/portfolio/beasiswa-kpbwi-provinsi-lampung.jpg" class="img-fluid lazyload" alt="beasiswa kpbwi provinsi lampung projek dari mipdevp"></a>
                 <div class="portfolio-info">
                   <h4>Beasiswa KPwBI Provinsi Lampung</h4>
                   <p>Aplikasi Website untuk Kantor Perwakilan Bank Indonesia Provinsi Lampung</p>
@@ -340,7 +340,7 @@
             <div class="col-xl-4 col-md-6 portfolio-item filter-branding">
               <div class="portfolio-wrap">
                 <a href="assets/img/portfolio/website-promosi-pariwisata-kabupaten-lombok-utara.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
-                    src="assets/img/portfolio/website-promosi-pariwisata-kabupaten-lombok-utara.jpg" class="img-fluid" alt="website promosi pariwisata kabupaten lombok utara projek dari mipdevp"></a>
+                    data-src="assets/img/portfolio/website-promosi-pariwisata-kabupaten-lombok-utara.jpg" class="img-fluid lazyload" alt="website promosi pariwisata kabupaten lombok utara projek dari mipdevp"></a>
                 <div class="portfolio-info">
                   <h4>Website Promosi Pariwisata Kabupaten
                     Lombok Utara</h4>
@@ -352,7 +352,7 @@
             <div class="col-xl-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <a href="assets/img/portfolio/aplikasi-psikotes-pemprov-kalimantan-barat.jpg" data-gallery="portfolio-gallery-app"
-                  class="glightbox"><img src="assets/img/portfolio/aplikasi-psikotes-pemprov-kalimantan-barat.jpg" class="img-fluid" alt="aplikasi psikotes pemprov kalimantan barat projek dari mipdevp"></a>
+                  class="glightbox"><img data-src="assets/img/portfolio/aplikasi-psikotes-pemprov-kalimantan-barat.jpg" class="img-fluid lazyload" alt="aplikasi psikotes pemprov kalimantan barat projek dari mipdevp"></a>
                 <div class="portfolio-info">
                   <h4>Aplikasi Psikotes Pemprov Kalimantan Barat</h4>
                   <p>Aplikasi Website untuk Pemprov Kalimantan Barat</p>
@@ -363,7 +363,7 @@
             <div class="col-xl-4 col-md-6 portfolio-item filter-branding">
               <div class="portfolio-wrap">
                 <a href="assets/img/portfolio/sobat-psikotes.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
-                    src="assets/img/portfolio/sobat-psikotes.jpg" class="img-fluid" alt="sobat psikotes projek dari mipdevp"></a>
+                    data-src="assets/img/portfolio/sobat-psikotes.jpg" class="img-fluid lazyload" alt="sobat psikotes projek dari mipdevp"></a>
                 <div class="portfolio-info">
                   <h4>Sobat Psikotes</h4>
                   <p>Landing Page untuk Sobat Psikotes</p>
@@ -374,7 +374,7 @@
             <div class="col-xl-4 col-md-6 portfolio-item filter-branding">
               <div class="portfolio-wrap">
                 <a href="assets/img/portfolio/lampung-begawi.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
-                    src="assets/img/portfolio/lampung-begawi.jpg" class="img-fluid" alt="lampung begawi projek dari mipdevp"></a>
+                    data-src="assets/img/portfolio/lampung-begawi.jpg" class="img-fluid lazyload" alt="lampung begawi projek dari mipdevp"></a>
                 <div class="portfolio-info">
                   <h4>Lampung Begawi</h4>
                   <p>Landing Page untuk Kantor Perwakilan Bank Indonesia Provinsi Lampung</p>
@@ -385,7 +385,7 @@
             <div class="col-xl-4 col-md-6 portfolio-item filter-branding">
               <div class="portfolio-wrap">
                 <a href="assets/img/portfolio/forum-investasi-lampung.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
-                    src="assets/img/portfolio/forum-investasi-lampung.jpg" class="img-fluid" alt="forum investasi lampung projek dari mipdevp"></a>
+                    data-src="assets/img/portfolio/forum-investasi-lampung.jpg" class="img-fluid lazyload" alt="forum investasi lampung projek dari mipdevp"></a>
                 <div class="portfolio-info">
                   <h4>Forum Investasi Lampung</h4>
                   <p>Landing Page untuk Kantor Perwakilan Bank Indonesia Provinsi Lampung</p>
@@ -396,7 +396,7 @@
             <div class="col-xl-4 col-md-6 portfolio-item filter-branding">
               <div class="portfolio-wrap">
                 <a href="assets/img/portfolio/pkbm-gemma-al-fajar.jpg" data-gallery="portfolio-gallery-app"
-                  class="glightbox"><img src="assets/img/portfolio/pkbm-gemma-al-fajar.jpg" class="img-fluid" alt="pkbm gemma al fajar projek dari mipdevp"></a>
+                  class="glightbox"><img data-src="assets/img/portfolio/pkbm-gemma-al-fajar.jpg" class="img-fluid lazyload" alt="pkbm gemma al fajar projek dari mipdevp"></a>
                 <div class="portfolio-info">
                   <h4>PKBM Gemma Al-Fajar</h4>
                   <p>Company Profile untuk PKBM Gemma Al-Fajar</p>
@@ -407,7 +407,7 @@
             <div class="col-xl-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <a href="assets/img/portfolio/pembinaan-dan-pelatihan-private-mandiri-polisi.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
-                    src="assets/img/portfolio/pembinaan-dan-pelatihan-private-mandiri-polisi.jpg" class="img-fluid" alt="pembinaan dan pelatihan private mandiri polisi projek dari mipdevp"></a>
+                    data-src="assets/img/portfolio/pembinaan-dan-pelatihan-private-mandiri-polisi.jpg" class="img-fluid lazyload" alt="pembinaan dan pelatihan private mandiri polisi projek dari mipdevp"></a>
                 <div class="portfolio-info">
                   <h4>Pembinaan dan Pelatihan Private Mandiri Polisi</h4>
                   <p>Aplikasi Website untuk BT-PMP</p>
@@ -418,7 +418,7 @@
             <div class="col-xl-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <a href="assets/img/portfolio/institut-teknologi-dan-bisnis-mesuji.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img
-                    src="assets/img/portfolio/institut-teknologi-dan-bisnis-mesuji.jpg" class="img-fluid" alt="institut teknologi dan bisnis mesuji projek dari mipdevp"></a>
+                    data-src="assets/img/portfolio/institut-teknologi-dan-bisnis-mesuji.jpg" class="img-fluid lazyload" alt="institut teknologi dan bisnis mesuji projek dari mipdevp"></a>
                 <div class="portfolio-info">
                   <h4>Institut Teknologi dan Bisnis Mesuji</h4>
                   <p>Landing Page untuk ITB Mesuji</p>
@@ -435,7 +435,7 @@
 
     <!-- ======= Frequently Asked Questions Section ======= -->
     <section id="faq" class="faq sections-bg">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
 
         <div class="row gy-4">
 
@@ -450,7 +450,7 @@
 
           <div class="col-lg-8">
 
-            <div class="accordion accordion-flush" id="faqlist" data-aos="fade-up" data-aos-delay="100">
+            <div class="accordion accordion-flush" id="faqlist">
 
               <div class="accordion-item">
                 <h3 class="accordion-header">
@@ -541,7 +541,7 @@
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
 
         <div class="section-header">
           <h2>Contact</h2>
@@ -729,9 +729,14 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/js/lazysizes.min.js" async></script>
+  
+</body>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <script> (function() { var v = document.getElementsByClassName("youtube-player"); for (var n = 0; n < v.length; n++) { v[n].onclick = function () { var iframe = document.createElement("iframe"); iframe.setAttribute("src", "//www.youtube.com/embed/" + this.dataset.id + "?autoplay=1&autohide=2&border=0&wmode=opaque&enablejsapi=1&rel="+ this.dataset.related +"&controls="+this.dataset.control+"&showinfo=" + this.dataset.info); iframe.setAttribute("frameborder", "0"); iframe.setAttribute("id", "youtube-iframe"); iframe.setAttribute("style", "width: 100%; height: 100%; position: absolute; top: 0; left: 0;"); if (this.dataset.fullscreen == 1){ iframe.setAttribute("allowfullscreen", ""); } while (this.firstChild) { this.removeChild(this.firstChild); } this.appendChild(iframe); }; } })(); </script>
 
 </body>
 
