youtube embed video script added 3

--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/impact-bootstrap-business-website-template/ -->
-        <a>Designed by MIPDEVP</a>
+        Designed by MIPDEVP
       </div>
     </div>
 
@@ -728,8 +728,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <script src="assets/js/lazysizes.min.js" async></script>
-  <!--<script type="text/javascript" src="assets/js/youtube-defer.js" async> </script>-->
+  <script src="assets/js/lazysizes.min.js" async></script>  
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
