--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <meta content="Website dengan desain dan teknologi terkini ada di tangan Anda. Mulai dari Company Profile hingga Aplikasi Website, kembangkan bisnis dan jangkau lebih banyak pelanggan. Pesan sekarang!" name="description">
   <meta content="buat website, aplikasi website, landing page, company profile, seo friendly, seo on page, kursus pemrograman" name="keywords">
   <meta name="author" content="MIPDEVP" />
-  <link rel="canonical" href="https://mipdevp.com" />
+  <link rel="canonical" href="https://mipdevp.com/web" />
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://mipdevp.com">
+  <meta property="og:url" content="https://mipdevp.com/web">
   <meta property="og:title" content="Buat Website Terkini dan Berkualitas di Indonesia - MIPDEVP"/>
   <meta property="og:locale" content="id_ID">
   <meta property="og:site_name" content="MIPDEVP">
