seo optimized h3 services changed

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
               <div class="icon">
                 <i class="bi bi-graph-up"></i>
               </div>
-              <h3 style="font-size: 20px;">Aplikasi Website &amp; Mobile</h3>
+              <h3>Aplikasi Website &amp; Mobile</h3>
               <p>Kegiatan bisnis terdigitalisasi dan teroptimasi dalam Aplikasi Website bisa anda wujudkan di sini. Aplikasi Website bisa di sesuaikan menjadi Aplikasi Mobile sesuai kebutuhan Anda.</p>              
             </div>
           </div><!-- End Service Item -->
@@ -296,7 +296,7 @@
               <div class="icon">
                 <i class="bi bi-easel"></i>
               </div>
-              <h3 style="font-size: 20px;">Pelatihan Pemrograman</h3>
+              <h3>Pelatihan Pemrograman</h3>
               <p>Buat anda yang mengalami stuck/kebingungan dalam pemrograman, MIPDEVP bisa bantu selesaikan tugas atau projek pemrograman anda hingga selesai!</p>              
             </div>
           </div><!-- End Service Item -->          
