--- a/index.html
+++ b/index.html
@@ -137,8 +137,12 @@
                 class="bi bi-whatsapp"></i><span>Chat Kami</span></a>
           </div>
         </div>
-        <div class="col-lg-5 order-1 order-lg-2">
-          <img src="assets/img/hero-img.png" class="img-fluid" alt="logo image hero untuk mipdevp pembuatan website">
+        <div class="col-lg-5 order-1 order-lg-2 text-center">
+          <picture>
+            <source media="(max-width: 650px)" srcset="assets/img/hero-img-mobile.png">  
+            </source>
+            <img src="assets/img/hero-img.png" class="img-fluid" alt="logo image hero untuk mipdevp pembuatan website">
+          </picture>
         </div>
       </div>
     </div>
@@ -159,7 +163,11 @@
         <div class="row gy-4">
           <div class="col-lg-6">
             <!--<h3>Voluptatem dignissimos provident quasi corporis</h3>-->
+            <picture>
+              <source media="(max-width: 650px)" srcset="assets/img/tentang-mipdevp-jasa-buat-website-impian-anda-mobile.jpg">  
+              </source>
             <img data-src="assets/img/tentang-mipdevp-jasa-buat-website-impian-anda.png" class="img-fluid rounded-1 lazyload" alt="tentang mipdevp jasa pembuatan website">
+            </picture>          
           </div>
           <div class="col-lg-6">
             <div class="content ps-0 ps-lg-5">
