preload mobile hero img

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
   <!-- Preload Image and Files -->
   <link rel="preload" href="assets/img/hero-img.png" as="image">
+  <link rel="preload" href="assets/img/hero-img-mobile.png" as="image">
   <link rel="preload" href="assets/img/logo-mipdevp-buat-website-terkini-terjangkau.png" as="image">
   <link rel="preload" href="assets/img/favicon.png" as="image">
 
