--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
           <li><a href="#faq">FAQs</a></li>          
           <li><a href="#contact">Kontak</a></li>
           <li><a href="#youtube-tutorial">Tutorial</a></li>
+          <li><a href="https://mipdevp.com/blog">Blog</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -126,7 +127,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="hero">
-    <div class="container position-relative">
+    <div class="container position-relative" data-aos="zoom-in">
       <div class="row gy-5">
         <div class="col-lg-7 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
           <h1><span>Kembangkan bisnismu</span> dengan Website Terkini!</h1>
@@ -154,7 +155,7 @@
 
     <!-- ======= About Us Section ======= -->
     <section id="about" class="about">
-      <div class="container">
+      <div class="container" data-aos="fade-up">
 
         <div class="section-header">
           <h2>Tentang Kami</h2>
@@ -200,7 +201,7 @@
 
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="clients">
-      <div class="container">
+      <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Klien</h2>
           <p>Berikut beberapa Klien dari berbagai Perusahaan dan Instansi Pemerintahan yang sudah mempercayakan kami :
@@ -231,7 +232,7 @@
 
     <!-- ======= Stats Counter Section ======= -->
     <section id="stats-counter" class="stats-counter sections-bg">
-      <div class="container">
+      <div class="container" data-aos="fade-up">
 
         <div class="row gy-4 align-items-center">
 
@@ -262,7 +263,7 @@
 
     <!-- ======= Call To Action Section ======= -->
     <section id="call-to-action" class="call-to-action">
-      <div class="container text-center">
+      <div class="container text-center" data-aos="fade-up">
         <h3>Buat Website Impian Anda Sekarang!</h3>
         <p>Konsultasikan apapun yang dibutuhkan untuk mewujudkan Website yang anda inginkan.</p>
         <a class="cta-btn" href="https://api.whatsapp.com/send?phone=6282180221160" target="_blank" rel="noreferrer noopener">Pesan Sekarang</a>
@@ -271,7 +272,7 @@
 
     <!-- ======= Our Services Section ======= -->
     <section id="services" class="services sections-bg">
-      <div class="container">
+      <div class="container" data-aos="fade-up">
 
         <div class="section-header">
           <h2>Layanan Kami</h2>
@@ -317,7 +318,7 @@
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
-      <div class="container">
+      <div class="container" data-aos="fade-right">
 
         <div class="section-header">
           <h2>Portfolio</h2>
@@ -446,7 +447,7 @@
 
     <!-- ======= Frequently Asked Questions Section ======= -->
     <section id="faq" class="faq sections-bg">
-      <div class="container">
+      <div class="container" data-aos="fade-left">
 
         <div class="row gy-4">
 
@@ -552,7 +553,7 @@
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
-      <div class="container">
+      <div class="container" data-aos="zoom-in">
 
         <div class="section-header">
           <h2>Contact</h2>
@@ -605,7 +606,7 @@
 
     <!-- ======= Video Tutorial Terbaru ======= -->
     <section id="youtube-tutorial" class="recent-posts sections-bg">
-      <div class="container">
+      <div class="container" data-aos="zoom-out">
 
         <div class="section-header">
           <h2>Video Tutorial Terbaru</h2>
